# saltytools

./: .clang-format  .gitignore  README.md  meson.build  precompiled.h
.github/workflows/: ci.yaml
573file/: ifs.c  ifs.h  lz-file.c  lz-file.h  lz.c  lz.h  meson.build  prop-binary-reader.c  prop-binary-reader.h  prop-type.c  prop-type.h  prop-xml-writer.c  prop-xml-writer.h  prop.c  prop.h  tex.c  tex.h
ifsdump/: main.c  meson.build
picture/: meson.build  picture-png.c  picture-png.h  picture.c  picture.h
texdump/: main.c  meson.build
util/: crypto.c  crypto.h  fs.c  fs.h  hex.c  hex.h  iobuf.c  iobuf.h  list.c  list.h  log.c  log.h  macro.h  meson.build  str.c  str.h
xmldump/: main.c  meson.build
