_573file_lib = static_library(
  '573file',
  c_pch: '../precompiled.h',
  include_directories: [inc],
  sources: [
    'ifs.c',
    'ifs.h',
    'prop-binary-reader.c',
    'prop-binary-reader.h',
    'prop-type.c',
    'prop-type.h',
    'prop-xml-writer.c',
    'prop-xml-writer.h',
    'prop.c',
    'prop.h',
  ]
)
