util_lib = static_library(
  'util',
  dependencies: [openssl_dep],
  include_directories: [inc],
  c_pch: '../precompiled.h',
  sources: [
    'crypto.c',
    'crypto.h',
    'fs.c',
    'fs.h',
    'hex.c',
    'hex.h',
    'iobuf.c',
    'iobuf.h',
    'list.c',
    'list.h',
    'log.c',
    'log.h',
    'macro.h',
    'str.c',
    'str.h',
  ]
)
